[package]
name = "gtfs-screens-ingest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
agency-structs = { path = "../agency-structs" }
gtfs-structures = { version = "0.41.1", features = ["read-url"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
